<resources>
    <string name="app_name">SocialMap</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_add_message">Add New Message To Map</string>
    <string name="btn_view_friends">View Friends List</string>
    <string name="btn_my_profile">View My Profile</string>
    <string name="btn_view_my_messages">View My Messages</string>
    <string name="mapbox_token">pk.eyJ1IjoicXVpbm5taWwiLCJhIjoiY2poNndlc2NuMDEyODJwcGd4OWw5d2M0YyJ9.ld7OWGt932HW0ebcv8CZFw</string>
    <string name="new_message_title">New Message</string>
    <string name="new_message_hint">Write a new message</string>
    <string name="btn_new_message_create">Create</string>
    <string name="btn_new_message_cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewProfile_showUsername">Username: %1$s</string>
    <string name="viewProfile_showAccountDate">Since: %1$s</string>
    <string name="viewProfile_showNumberMessages">Number of Messages: %1$d</string>
    <string name="viewProfile_showNumberFriends">Number of Friends: %1$d</string>
    <string name="viewProfile_deleteAccount">Delete Account</string>
    <string name="viewProfile_signOut">Sign Out</string>
    <string name="base_url">http://10.0.2.2:8000/socialmap/api/</string>
    <!--<string name="base_url">http://192.168.137.1:8000/socialmap/api/</string>-->
    <string name="hint_add_username">Enter Username</string>
    <string name="Friend_title">Add Friend</string>
    <string name="NewFriend_hint">Enter Friends Username</string>
    <string name="viewFriends_banner">Friends</string>
</resources>
