<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfileActivity">

    <TextView
        android:id="@+id/viewProfile_showUsername"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:text="@string/viewProfile_showUsername"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewProfile_showAccountDate"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:text="@string/viewProfile_showAccountDate"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfile_showUsername" />

    <TextView
        android:id="@+id/viewProfile_showNumberMessages"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:text="@string/viewProfile_showNumberMessages"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfile_showAccountDate" />

    <TextView
        android:id="@+id/viewProfile_showNumberFriends"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:text="@string/viewProfile_showNumberFriends"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfile_showNumberMessages" />

    <Button
        android:id="@+id/viewProfile_deleteAccount"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/viewProfile_deleteAccount"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfile_showNumberFriends" />

    <Button
        android:id="@+id/viewProfile_signOut"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/viewProfile_signOut"
        android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewProfile_deleteAccount" />
</android.support.constraint.ConstraintLayout>
